Add dayjs dependency, update primary color, and refine layout styles

--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,7 @@
 <!doctype html>
-<html lang="en" data-theme="lemonade">
+<!-- Themes We Like -->
+<!-- light, emerald, bumblebee, garden, fantasy, lemonade -->
+<html lang="en" data-theme="fantasy">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
