--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,15 @@
 <html lang="en" data-theme="fantasy">
 
 <head>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-SFS5SMJPQ4"></script>
+	<script>
+  		window.dataLayer = window.dataLayer || [];
+  		function gtag(){dataLayer.push(arguments);}
+  		gtag('js', new Date());
+
+  		gtag('config', 'G-SFS5SMJPQ4');
+	</script>
 	<meta charset="utf-8" />
 	<!-- Apple Touch Icon -->
 	<link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
